[feat]: [CDS-42831]: adding service override support for svc as expression (#37252)
* [CDS-42831]: added sweeping output pojos

* [CDS-42831]: added ServiceStepOverrideHelper.java to support override with svc as exp

* [CDS-42831]: move validation logic to ManifestsStepV2

* [CDS-42831]: fix junits

* [CDS-39942]: add config files override support for svc as expression

* [CDS-42831]: fix bugs and updated junits

* [CDS-42831]: fix checkstyle

* [CDS-42831]: fix CDNGComponentTest

* [CDS-42831]: rename to  NgConfigFilesMetadataSweepingOutput

* [CDS-42831]: removed redundant expression resolver