@@ -1,5 +1,15 @@
+/*
+ * Copyright 2022 Harness Inc. All rights reserved.
+ * Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
+ * that can be found in the licenses directory at the root of this repository, also available at
+ * https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.
+ */
+
 package io.harness.cdng.manifest.steps;
 
+import static io.harness.cdng.service.steps.ServiceStepOverrideHelper.ENVIRONMENT_GLOBAL_OVERRIDES;
+import static io.harness.cdng.service.steps.ServiceStepOverrideHelper.SERVICE;
+import static io.harness.cdng.service.steps.ServiceStepOverrideHelper.SERVICE_OVERRIDES;
 import static io.harness.data.structure.UUIDGenerator.generateUuid;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -18,6 +28,7 @@ import io.harness.cdng.manifest.ManifestConfigType;
 import io.harness.cdng.manifest.yaml.GitStore;
 import io.harness.cdng.manifest.yaml.ManifestConfig;
 import io.harness.cdng.manifest.yaml.ManifestConfigWrapper;
+import io.harness.cdng.manifest.yaml.kinds.HelmChartManifest;
 import io.harness.cdng.manifest.yaml.kinds.K8sManifest;
 import io.harness.cdng.manifest.yaml.kinds.ValuesManifest;
 import io.harness.cdng.manifest.yaml.storeConfig.StoreConfigType;
@@ -25,6 +36,7 @@ import io.harness.cdng.manifest.yaml.storeConfig.StoreConfigWrapper;
 import io.harness.cdng.service.beans.KubernetesServiceSpec;
 import io.harness.cdng.service.beans.ServiceDefinition;
 import io.harness.cdng.service.beans.ServiceDefinitionType;
+import io.harness.cdng.service.steps.ServiceStepV3;
 import io.harness.cdng.steps.EmptyStepParameters;
 import io.harness.connector.ConnectorResponseDTO;
 import io.harness.connector.services.ConnectorService;
@@ -34,6 +46,8 @@ import io.harness.ng.core.service.yaml.NGServiceV2InfoConfig;
 import io.harness.pms.contracts.ambiance.Ambiance;
 import io.harness.pms.contracts.ambiance.Level;
 import io.harness.pms.contracts.execution.Status;
+import io.harness.pms.sdk.core.data.OptionalSweepingOutput;
+import io.harness.pms.sdk.core.resolver.RefObjectUtils;
 import io.harness.pms.sdk.core.resolver.outputs.ExecutionSweepingOutputService;
 import io.harness.pms.sdk.core.steps.io.StepResponse;
 import io.harness.pms.yaml.ParameterField;
@@ -41,6 +55,9 @@ import io.harness.rule.Owner;
 import io.harness.rule.OwnerRule;
 
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -60,6 +77,9 @@ public class ManifestsStepV2Test {
   @Mock private CDExpressionResolver expressionResolver;
   @InjectMocks private ManifestsStepV2 step = new ManifestsStepV2();
   private AutoCloseable mocks;
+
+  private static final String SVC_ID = "SVC_ID";
+  private static final String ENV_ID = "ENV_ID";
 
   @Before
   public void setUp() throws Exception {
@@ -86,9 +106,23 @@ public class ManifestsStepV2Test {
     ManifestConfigWrapper file2 = sampleValuesYamlFile("file2");
     ManifestConfigWrapper file3 = sampleValuesYamlFile("file3");
 
-    doReturn(getServiceConfig(List.of(file1, file2, file3)))
-        .when(cdStepHelper)
-        .fetchServiceConfigFromSweepingOutput(any(Ambiance.class));
+    final Map<String, List<ManifestConfigWrapper>> finalManifests = new HashMap<>();
+    finalManifests.put(SERVICE, Collections.singletonList(file1));
+    finalManifests.put(ENVIRONMENT_GLOBAL_OVERRIDES, Collections.singletonList(file2));
+    finalManifests.put(SERVICE_OVERRIDES, Collections.singletonList(file3));
+
+    doReturn(OptionalSweepingOutput.builder()
+                 .found(true)
+                 .output(NgManifestsMetadataSweepingOutput.builder()
+                             .finalSvcManifestsMap(finalManifests)
+                             .serviceIdentifier(SVC_ID)
+                             .environmentIdentifier(ENV_ID)
+                             .serviceDefinitionType(ServiceDefinitionType.KUBERNETES)
+                             .build())
+                 .build())
+        .when(sweepingOutputService)
+        .resolveOptional(any(Ambiance.class),
+            eq(RefObjectUtils.getOutcomeRefObject(ServiceStepV3.SERVICE_MANIFESTS_SWEEPING_OUTPUT)));
 
     StepResponse stepResponse = step.executeSync(buildAmbiance(), new EmptyStepParameters(), null, null);
 
@@ -114,9 +148,22 @@ public class ManifestsStepV2Test {
     ManifestConfigWrapper file2 = sampleManifestFile("file2", ManifestConfigType.K8_MANIFEST);
     ManifestConfigWrapper file3 = sampleValuesYamlFile("file3");
 
-    doReturn(getServiceConfig(List.of(file1, file2, file3)))
-        .when(cdStepHelper)
-        .fetchServiceConfigFromSweepingOutput(any(Ambiance.class));
+    final Map<String, List<ManifestConfigWrapper>> finalManifests = new HashMap<>();
+    finalManifests.put(SERVICE, Arrays.asList(file1, file2));
+    finalManifests.put(SERVICE_OVERRIDES, Collections.singletonList(file3));
+
+    doReturn(OptionalSweepingOutput.builder()
+                 .found(true)
+                 .output(NgManifestsMetadataSweepingOutput.builder()
+                             .finalSvcManifestsMap(finalManifests)
+                             .serviceIdentifier(SVC_ID)
+                             .environmentIdentifier(ENV_ID)
+                             .serviceDefinitionType(ServiceDefinitionType.KUBERNETES)
+                             .build())
+                 .build())
+        .when(sweepingOutputService)
+        .resolveOptional(any(Ambiance.class),
+            eq(RefObjectUtils.getOutcomeRefObject(ServiceStepV3.SERVICE_MANIFESTS_SWEEPING_OUTPUT)));
 
     try {
       step.executeSync(buildAmbiance(), new EmptyStepParameters(), null, null);
@@ -132,19 +179,34 @@ public class ManifestsStepV2Test {
   @Owner(developers = OwnerRule.YOGESH)
   @Category(UnitTests.class)
   public void executeSyncFailWithInvalidManifestList_1() {
-    ManifestConfigWrapper file1 = sampleManifestFile("file1", ManifestConfigType.HELM_CHART);
+    ManifestConfigWrapper file1 = sampleHelmChartManifestFile("file1", ManifestConfigType.HELM_CHART);
     // 2 k8s manifests are not allowed
-    ManifestConfigWrapper file2 = sampleManifestFile("file2", ManifestConfigType.HELM_CHART);
+    ManifestConfigWrapper file2 = sampleHelmChartManifestFile("file2", ManifestConfigType.HELM_CHART);
     ManifestConfigWrapper file3 = sampleValuesYamlFile("file3");
 
-    doReturn(getServiceConfig(List.of(file1, file2, file3)))
-        .when(cdStepHelper)
-        .fetchServiceConfigFromSweepingOutput(any(Ambiance.class));
+    final Map<String, List<ManifestConfigWrapper>> finalManifests = new HashMap<>();
+    finalManifests.put(SERVICE, Arrays.asList(file1, file2));
+    finalManifests.put(SERVICE_OVERRIDES, Collections.singletonList(file3));
+
+    doReturn(OptionalSweepingOutput.builder()
+                 .found(true)
+                 .output(NgManifestsMetadataSweepingOutput.builder()
+                             .finalSvcManifestsMap(finalManifests)
+                             .serviceIdentifier(SVC_ID)
+                             .environmentIdentifier(ENV_ID)
+                             .serviceDefinitionType(ServiceDefinitionType.NATIVE_HELM)
+                             .build())
+                 .build())
+        .when(sweepingOutputService)
+        .resolveOptional(any(Ambiance.class),
+            eq(RefObjectUtils.getOutcomeRefObject(ServiceStepV3.SERVICE_MANIFESTS_SWEEPING_OUTPUT)));
 
     try {
       step.executeSync(buildAmbiance(), new EmptyStepParameters(), null, null);
     } catch (InvalidRequestException ex) {
-      assertThat(ex.getMessage()).contains("Kubernetes deployment support only one manifest of one of types");
+      assertThat(ex.getMessage())
+          .contains(
+              "Multiple manifests found [file2 : HelmChart, file1 : HelmChart]. NativeHelm deployment support only one manifest of one of types: HelmChart. Remove all unused manifests");
       return;
     }
 
@@ -160,9 +222,22 @@ public class ManifestsStepV2Test {
     ManifestConfigWrapper file2 = sampleValuesYamlFile("file2");
     ManifestConfigWrapper file3 = sampleValuesYamlFile("file3");
 
-    doReturn(getServiceConfig(List.of(file1, file2, file3)))
-        .when(cdStepHelper)
-        .fetchServiceConfigFromSweepingOutput(any(Ambiance.class));
+    final Map<String, List<ManifestConfigWrapper>> finalManifests = new HashMap<>();
+    finalManifests.put(SERVICE, Arrays.asList(file1, file2));
+    finalManifests.put(SERVICE_OVERRIDES, Collections.singletonList(file3));
+
+    doReturn(OptionalSweepingOutput.builder()
+                 .found(true)
+                 .output(NgManifestsMetadataSweepingOutput.builder()
+                             .finalSvcManifestsMap(finalManifests)
+                             .serviceIdentifier(SVC_ID)
+                             .environmentIdentifier(ENV_ID)
+                             .serviceDefinitionType(ServiceDefinitionType.NATIVE_HELM)
+                             .build())
+                 .build())
+        .when(sweepingOutputService)
+        .resolveOptional(any(Ambiance.class),
+            eq(RefObjectUtils.getOutcomeRefObject(ServiceStepV3.SERVICE_MANIFESTS_SWEEPING_OUTPUT)));
 
     try {
       step.executeSync(buildAmbiance(), new EmptyStepParameters(), null, null);
@@ -195,6 +270,28 @@ public class ManifestsStepV2Test {
                       .identifier(identifier)
                       .type(type)
                       .spec(K8sManifest.builder()
+                                .identifier(identifier)
+                                .store(ParameterField.createValueField(
+                                    StoreConfigWrapper.builder()
+                                        .type(StoreConfigType.GIT)
+                                        .spec(GitStore.builder()
+                                                  .folderPath(ParameterField.createValueField("manifests/"))
+                                                  .connectorRef(ParameterField.createValueField("gitconnector"))
+                                                  .branch(ParameterField.createValueField("main"))
+                                                  .paths(ParameterField.createValueField(List.of("path1", "path2")))
+                                                  .build())
+                                        .build()))
+                                .build())
+                      .build())
+        .build();
+  }
+
+  private ManifestConfigWrapper sampleHelmChartManifestFile(String identifier, ManifestConfigType type) {
+    return ManifestConfigWrapper.builder()
+        .manifest(ManifestConfig.builder()
+                      .identifier(identifier)
+                      .type(type)
+                      .spec(HelmChartManifest.builder()
                                 .identifier(identifier)
                                 .store(ParameterField.createValueField(
                                     StoreConfigWrapper.builder()
